--- a/assets/css/editor-style.css
+++ b/assets/css/editor-style.css
@@ -4,14 +4,14 @@
 /* Styles specific to the editor. */
 
 body#tinymce {
-	background: #fff;
+	background: $color__white;
 	border: none;
 	margin-top: 1.7em;
 	margin-left: 3%;
 	padding-right: 3%;
-	max-width: 620px;
+	max-width: $site__bottom-max-width;
 }
 
 body#tinymce a {
-    border-bottom: 2px solid #ffcd00;
+    border-bottom: 2px solid $color__accent;
 }
