--- a/sass/navigation/_menu-social.scss
+++ b/sass/navigation/_menu-social.scss
@@ -1,5 +1,6 @@
 .menu-social {
   padding-bottom: 1.5em;
+  text-align: center;
 
   ul {
     list-style: none;
@@ -18,10 +19,9 @@
   }
 
   a {
-    background-color: #ffcd00;
-    border-bottom: none;
+    background-color: $color__accent;
     border-radius: 4px;
-    color: #000;
+    color: $color__black;
     display: block;
     width: 3em;
     height: 3em;
@@ -29,8 +29,7 @@
     &:active,
     &:focus,
     &:hover {
-      background-color: #fff;
-      color: #000;
+      background-color: $color__white;
     }
 
     &:focus {
