--- a/sass/navigation/_menu-primary.scss
+++ b/sass/navigation/_menu-primary.scss
@@ -1,20 +1,16 @@
 .main-navigation {
   position: relative;
   text-transform: uppercase;
-  clear: both;
-  display: block;
-  width: 100%;
-  margin-bottom: .88888888888em;
+  margin-top: 1em;
 
   .no-header-text & {
-    margin-bottom: 0;
+    margin-top: 0;
   }
 
   ul {
     display: none;
     list-style: none;
     margin: 0;
-    padding: 0 10%;
 
     .no-js & {
       display: block;
@@ -25,26 +21,21 @@
     display: block;
     position: relative;
     border-bottom: 2px solid $color__black;
-
-    &.focus > a,
-    &:hover > a {
-      transform: rotate(-2deg);
-    }
   }
 
   a {
     display: block;
-    font-size: .88888888em;
+    @include font-size(.88888888);
     line-height: 1.3125;
-    padding: .84375em;
-    transition: all .01s ease-in-out;
+    outline-offset: -1px;
+    padding: .84375em 0;
   }
 
   .current-menu-ancestor > a,
   .current-menu-item > a,
   .current_page_ancestor > a,
   .current_page_item > a {
-    font-weight: bold;
+    font-weight: 700;
   }
 }
 
@@ -66,6 +57,7 @@
   transition: all .2s ease-in-out;
   @include center-block;
 }
+
 @include screen($breakpoint) {
   .menu-toggle {
     display: none;
@@ -79,23 +71,13 @@
 
     li {
       display: inline-block;
-      border-bottom: 0;
-
-      &:after {
-        color: $color__black;
-        content: "\002F";
-        padding: 0 .75em;
-      }
-
-      &:last-of-type:after {
-        display: none;
-      }
+      border: 0;
     }
 
     a {
       display: inline-block;
       border: 0;
-      padding: .84375em 0;
+      padding: .65625em;
     }
   }
 }
